Enhance header styling in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Sample HTML Page</title>
     </head>
 <body>
-    <h1>Welcome to the Sample HTML Page</h1>
+    <h1 style="text-align: center; color: blue; border: 1px solid blue;">Welcome to the Sample HTML Page</h1>
     <p>This is a simple HTML document.</p>
 </body>
 </html>
